# AirportSimulator

./: CMakeLists.txt  README.md  main.cpp
docs/: ProjectTimeline.txt  testsToBePerformed.txt
include/: AircraftRequest.h  Airport.h  AirportLocation.h  Location.h  LocationManager.h  LocationMap.h  Logger.h  ParkingStand.h  RequestToken.h  Runway.h  StateManager.h
src/: AircraftRequest.cpp  Airport.cpp  AirportLocation.cpp  Location.cpp  LocationMap.cpp  Logger.cpp  ParkingStand.cpp  RequestToken.cpp  Runway.cpp  StateManager.cpp
